# cardano-coin-selection

./: cabal.project  cardano-coin-selection.cabal  package.yaml  weeder.toml
.github/workflows/: build.yml
coverage/: coverage.tix  hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  index.html
coverage/cardano-coin-selection-0.0.1-AZFKVfG87UR8FpParmsnZ5-cardano-coin-selection-internal/: Internal.Invariant.hs.html  Internal.Rounding.hs.html
coverage/cardano-coin-selection-0.0.1-DKhG3iDWU3TKBjwxeylpW5/: Cardano.CoinSelection.Fee.hs.html  Cardano.CoinSelection.LargestFirst.hs.html  Cardano.CoinSelection.Migration.hs.html  Cardano.CoinSelection.RandomImprove.hs.html  Cardano.CoinSelection.hs.html
coverage/cardano-coin-selection-1.0.0-5XtpV0QyCJtKAUSPFqDxcG/: Cardano.CoinSelection.Algorithm.LargestFirst.hs.html  Cardano.CoinSelection.Algorithm.Migration.hs.html  Cardano.CoinSelection.Fee.hs.html  Cardano.CoinSelection.hs.html  Internal.Coin.hs.html  Internal.Invariant.hs.html
coverage/cardano-coin-selection-1.0.0-9mxSxcp5X15AdxCcezW6xH/: Cardano.CoinSelection.Fee.hs.html  Cardano.CoinSelection.LargestFirst.hs.html  Cardano.CoinSelection.Migration.hs.html  Cardano.CoinSelection.RandomImprove.hs.html  Cardano.CoinSelection.hs.html  Internal.Coin.hs.html  Internal.Invariant.hs.html  Internal.Rounding.hs.html
coverage/cardano-coin-selection-1.0.1-8ojWoRhyt8uDDrtGDJexFj/: Cardano.CoinSelection.Algorithm.LargestFirst.hs.html  Cardano.CoinSelection.Algorithm.Migration.hs.html  Cardano.CoinSelection.Algorithm.RandomImprove.hs.html  Cardano.CoinSelection.Fee.hs.html  Internal.Rounding.hs.html
haddock/: Cardano-CoinSelection-Algorithm-LargestFirst.html  Cardano-CoinSelection-Algorithm-Migration.html  Cardano-CoinSelection-Algorithm-RandomImprove.html  Cardano-CoinSelection-Fee.html  Cardano-CoinSelection-LargestFirst.html  Cardano-CoinSelection-Migration.html  Cardano-CoinSelection-RandomImprove.html  Cardano-CoinSelection.html  Cardano-Fee.html  Internal-Invariant.html  Internal-Rounding.html  Internal.html  cardano-coin-selection.haddock  cardano-coin-selection.txt  doc-index.html  doc-index.json  index.html
haddock/all/: doc-index-124.html  doc-index-33.html  doc-index-36.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index-Z.html  index.html
haddock/cardano-coin-selection-1.0.0/: Cardano-CoinSelection-Algorithm-LargestFirst.html  Cardano-CoinSelection-Algorithm-Migration.html  Cardano-CoinSelection-Algorithm-RandomImprove.html  Cardano-CoinSelection-Algorithm.html  Cardano-CoinSelection-Fee.html  Cardano-CoinSelection.html  cardano-coin-selection.haddock  cardano-coin-selection.txt  doc-index.html  doc-index.json  index.html
haddock/cardano-coin-selection-1.0.0/src/: Cardano.CoinSelection.Algorithm.LargestFirst.html  Cardano.CoinSelection.Algorithm.Migration.html  Cardano.CoinSelection.Algorithm.RandomImprove.html  Cardano.CoinSelection.Algorithm.html  Cardano.CoinSelection.Fee.html  Cardano.CoinSelection.html  Internal.Coin.html  Internal.Invariant.html  Internal.Rounding.html  Paths_cardano_coin_selection.html
haddock/cardano-coin-selection-1.0.1/: Cardano-CoinSelection-Algorithm-LargestFirst.html  Cardano-CoinSelection-Algorithm-Migration.html  Cardano-CoinSelection-Algorithm-RandomImprove.html  Cardano-CoinSelection-Algorithm.html  Cardano-CoinSelection-Fee.html  Cardano-CoinSelection.html  cardano-coin-selection.haddock  cardano-coin-selection.txt  doc-index.html  index.html
haddock/cardano-coin-selection-1.0.1/src/: Cardano.CoinSelection.Algorithm.Migration.html  Cardano.CoinSelection.Algorithm.RandomImprove.html  Cardano.CoinSelection.Fee.html  Internal.Coin.html  Internal.Invariant.html  Paths_cardano_coin_selection.html
haddock/src/: Cardano.CoinSelection.Algorithm.LargestFirst.html  Cardano.CoinSelection.Algorithm.Migration.html  Cardano.CoinSelection.Fee.html  Cardano.CoinSelection.LargestFirst.html  Cardano.CoinSelection.Migration.html  Cardano.CoinSelection.RandomImprove.html  Cardano.CoinSelection.html  Cardano.Fee.html  Internal.Invariant.html  Internal.Rounding.html  Internal.html
lib/coin-selection/: cardano-coin-selection.cabal
lib/coin-selection/bench/: UTxOIndexBench.hs
lib/coin-selection/test/spec/Cardano/CoinSelection/: BalanceSpec.hs
lib/numeric/src/Cardano/Numeric/: Util.hs
lib/numeric/test/unit/Cardano/Numeric/: UtilSpec.hs
lib/primitive/: cardano-wallet-primitive.cabal
lib/primitive/lib/Cardano/Wallet/: Unsafe.hs  Util.hs
lib/primitive/lib/Cardano/Wallet/Primitive/Types/: AssetName.hs  Coin.hs  Hash.hs  NetworkParameters.hs  TokenBundle.hs  TokenMap.hs  TokenPolicyId.hs  TokenQuantity.hs
lib/primitive/lib/Cardano/Wallet/Primitive/Types/TokenPolicyId/: Gen.hs
lib/primitive/test/spec/Cardano/Wallet/Primitive/Types/: TokenMapSpec.hs  TokenQuantitySpec.hs
lib/test-utils/: cardano-wallet-test-utils.cabal
lib/test-utils/src/Test/Hspec/: Extra.hs
lib/test-utils/src/Test/QuickCheck/: Extra.hs
lib/test-utils/src/Test/Utils/: Pretty.hs  Roundtrip.hs  Startup.hs
lib/test-utils/test/Test/Hspec/: ExtraSpec.hs
lib/test-utils/test/Test/QuickCheck/: ExtraSpec.hs
nix/: haskell.nix  project-package-list.nix
src/bench/: CoinDistribution.hs  Main.hs
