cabal-version: 3.6
name:          cardano-wallet-primitive
version:       0.2025.12.15
synopsis:      Selected primitive types for Cardano Wallet.
description:   Please see README.md.
homepage:      https://github.com/cardano-foundation/cardano-wallet
author:        Cardano Foundation (High Assurance Lab)
maintainer:    hal@cardanofoundation.org
copyright:     2018-2022 IOHK, 2023 Cardano Foundation
license:       Apache-2.0
category:      Web
build-type:    Simple

common language
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

common opts-lib
  ghc-options: -Wall -Wcompat -fwarn-redundant-constraints

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  ghc-options: -threaded -rtsopts -Wall

  if flag(release)
    ghc-options: -O2 -Werror

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:  lib
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-numeric
    , cardano-wallet-test-utils
    , commutative-semigroups
    , containers
    , crypto-primitives
    , deepseq
    , fmt
    , hashable
    , int-cast
    , lattices
    , memory
    , MonadRandom
    , monoid-subclasses
    , monoidmap
    , nothunks
    , QuickCheck
    , quiet
    , random
    , safe
    , text
    , text-class

  exposed-modules:
    Cardano.Wallet.Primitive.Types.AssetId
    Cardano.Wallet.Primitive.Types.AssetId.Gen
    Cardano.Wallet.Primitive.Types.AssetName
    Cardano.Wallet.Primitive.Types.AssetName.Gen
    Cardano.Wallet.Primitive.Types.Coin
    Cardano.Wallet.Primitive.Types.Coin.Gen
    Cardano.Wallet.Primitive.Types.Hash
    Cardano.Wallet.Primitive.Types.TokenBundle
    Cardano.Wallet.Primitive.Types.TokenBundle.Gen
    Cardano.Wallet.Primitive.Types.TokenMap
    Cardano.Wallet.Primitive.Types.TokenMap.Gen
    Cardano.Wallet.Primitive.Types.TokenPolicyId
    Cardano.Wallet.Primitive.Types.TokenPolicyId.Gen
    Cardano.Wallet.Primitive.Types.TokenQuantity
    Cardano.Wallet.Primitive.Types.TokenQuantity.Gen
    Cardano.Wallet.Unsafe
    Cardano.Wallet.Util
    Control.Monad.Random.NonRandom

test-suite test
  import:             language, opts-exe
  ghc-options:        -with-rtsopts=-M2G -with-rtsopts=-N4
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/data test/spec
  main-is:            run-test-suite.hs
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-numeric
    , cardano-wallet-primitive
    , cardano-wallet-test-utils
    , containers
    , filepath
    , fmt
    , hspec
    , hspec-core
    , QuickCheck
    , quickcheck-classes
    , quickcheck-instances
    , quickcheck-monoid-subclasses
    , string-qq
    , text
    , text-class
    , with-utf8

  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    Cardano.Wallet.Primitive.Types.CoinSpec
    Cardano.Wallet.Primitive.Types.HashSpec
    Cardano.Wallet.Primitive.Types.TokenBundleSpec
    Cardano.Wallet.Primitive.Types.TokenMapSpec
    Cardano.Wallet.Primitive.Types.TokenQuantitySpec
    Spec
    SpecHook
