name:          cardano-wallet-test-utils
version:       0.2025.12.15
synopsis:      Shared utilities for writing unit and property tests.
description:   Shared utilities for writing unit and property tests.
homepage:      https://github.com/cardano-foundation/cardano-wallet
author:        Cardano Foundation (High Assurance Lab)
maintainer:    hal@cardanofoundation.org
copyright:     2018-2020 IOHK
license:       Apache-2.0
category:      Web
build-type:    Simple
cabal-version: >=1.10

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:        -Wall -Wredundant-constraints -Wcompat

  if flag(release)
    ghc-options: -Werror

  build-depends:
      base
    , containers
    , fmt
    , formatting
    , generics-sop
    , hspec
    , int-cast
    , lattices
    , pretty-simple
    , QuickCheck
    , quickcheck-classes
    , text

  hs-source-dirs:     src
  exposed-modules:
    Test.QuickCheck.Extra
    Test.Utils.Laws
    Test.Utils.Laws.PartialOrd
    Test.Utils.Pretty

test-suite unit
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:        -threaded -rtsopts -Wall

  if flag(release)
    ghc-options: -O2 -Werror

  build-depends:
      base
    , cardano-wallet-test-utils
    , containers
    , extra
    , generic-lens
    , generics-sop
    , hspec
    , lattices
    , QuickCheck

  build-tool-depends: hspec-discover:hspec-discover
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            test-utils-unit-test.hs
  other-modules:
    Test.QuickCheck.ExtraSpec
